Fixed responsiveness issue in skill section on mobile

--- a/styles/_skills.scss
+++ b/styles/_skills.scss
@@ -6,7 +6,7 @@
 }
 
 .skillsFlex {
-    height: 70%;
+    height: 90%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -18,6 +18,7 @@
     font-style: italic;
     font-size: 5rem;
     margin-bottom: 1rem;
+    padding-top: .5rem;
 }
 
 .skills ul li {
