--- a/styles/style.css
+++ b/styles/style.css
@@ -193,7 +193,7 @@ button {
 }
 
 .skillsFlex {
-  height: 70%;
+  height: 90%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -205,6 +205,7 @@ button {
   font-style: italic;
   font-size: 5rem;
   margin-bottom: 1rem;
+  padding-top: 0.5rem;
 }
 
 .skills ul li {
